# Data-Analytic-

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  advanced_analytics.py  advanced_analytics_old.py  ai_insights.py  alembic.ini  analytics_tab.py  api.py  app.py  auth.py  compare_datasets.py  components.py  config.py  docker-compose.yml  exceptions.py  helpers.py  landing.py  learning_analytics.py  nginx.conf  overview_tab.py  pyproject.toml  report_utils.py  requirements.txt  run_public.py  saved_session.pkl  sidebar.py  solar_system.py  statistics_tab.py  task_progress.md  theme_config.py  utils.py
.github/workflows/: ci.yml
.streamlit/: config.toml
advanced_analytics/: __init__.py  ab_testing.py  advanced_stats.py  analytics_main.py  base.py  bootstrap.py  clustering.py  data_quality.py  diagnostics.py  feature_engineering.py  logistic.py  model_comparison.py  naive_bayes.py  pca.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
requirements/: base.txt  dev.txt  prod.txt
src/: __init__.py
src/api/: __init__.py
src/core/: __init__.py  ai_service.py  analytics_engine.py  database.py  statistical_tests.py
src/ui/: __init__.py  sidebar.py  theme.py
src/ui/tabs/: __init__.py  compare.py  landing.py  learning_analytics.py  overview.py  statistics.py
src/utils/: __init__.py  config.py  exceptions.py  helpers.py  logging_config.py  performance.py  security.py  validators.py
tests/: conftest.py  test_ai_service.py  test_api.py  test_database.py  test_security.py  test_statistical_tests.py  test_utils.py
